# RahulScipts

./: .pre-commit-config.yaml  CHANGES.rst  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: python-package.yml  python-publish.yml
RahulScripts.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
rahulscripts/: __init__.py  rahulscripts.py
rahulscripts/download/: __init__.py  downloader.py
rahulscripts/metrics/: __init__.py  custom_metrics.py
rahulscripts/utils/: __init__.py  text_highlight.py  utilities.py
