[tool.black]
line-length = 80
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
[tool.pycln]
all = true
exclude = "__init__.py"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true


[project]

name = "RahulScripts"
version = "0.0.3"
description = "Some daily used scripts"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["rahul", "scripts", "genomics", "class"]
authors = [
    {name = "Rahul Brahma", email = "rahul@drugonix.com"}
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Build Tools",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy"
]

dependencies=[
  "numpy",
  "ipywidgets",

]

[project.optional-dependencies]


[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
