[metadata]
name = RahulScripts
version = 0.0.1
author = Rahul Brahma
author_email = rahul@drugonix.com
description = Some daily used scripts
long_description = file: README.md
long_description_content_type = text/markdown
license_file = LICENSE
keywords = rahul scripts genomics class
url = https://www.drugonix.com
download_url = https://github.com/Takshan/RahulScripts/0.0.1.tar.gz
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Topic :: Software Development :: Build Tools
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = rahulscripts
setup_requires = pip
install_requires = pip; setuptools

[options.entry_points]
console_scripts = rahulscripts.cli = rahulscripts.cli:main
